filebrowser/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:  # Add the nodeSelector to force the pod to run on "pubuntu1"
        kubernetes.io/hostname: pubuntu1
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:s6
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 0  # Replace with the output of $(id -u)
          runAsGroup: 0 # Replace with the output of $(id -g)
        volumeMounts:
        - name: root-storage
          mountPath: /srv
        - name: db-storage
          mountPath: /database
        - name: config-storage
          mountPath: /.filebrowser.json
          subPath: .filebrowser.json
        - name: settings-config
          mountPath: /etc/filebrowser/settings.json
          subPath: settings.json
      volumes:
      - name: root-storage
        persistentVolumeClaim:
          claimName: filebrowser-storage-pvc
      - name: db-storage
        persistentVolumeClaim:
          claimName: filebrowser-db-pvc
      - name: config-storage
        persistentVolumeClaim:
          claimName: filebrowser-config-pvc
      - name: settings-config
        configMap:
          name: filebrowser-settings
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  ports:
  - port: 8080
    targetPort: 80
    name: http-port
  selector:
    app: filebrowser
